Renamed to Yaete to Kaete.

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-Yaete
+Kaete
 -----
 
-Yaete is Yet Another ECMAScript Templating Engine. Coming soon, to a github near you!
+Kaete's An ECMAScript Templating Engine. Coming soon, to a github near you!
 
